[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/MapProps/Monsters/rat_props.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/MapProps/Monsters/onion_props.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Fonts/Kenney Future Narrow.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://MyResources/DynamicFonts/Kenney_Mini_S8.res" type="DynamicFont" id=4]
[ext_resource path="res://MyResources/ThemesFolder/focusGButton.stylebox" type="StyleBox" id=5]
[ext_resource path="res://MyResources/ThemesFolder/greenButton.stylebox" type="StyleBox" id=6]
[ext_resource path="res://Scripts/main_menu.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Mr_Onion:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 5.46623, 0, -2.01231 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "walk_back"
length = 16.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Mr_Onion:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 16 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 7.73617, 0, -2.01231 ), Vector3( -7.25815, 0, -2.01231 ) ]
}

[sub_resource type="Environment" id=1]
background_mode = 1
background_color = Color( 0.113725, 0.113725, 0.113725, 1 )
background_energy = 0.0

[node name="Main_menu" type="Spatial"]
script = ExtResource( 7 )
__meta__ = {
"_edit_vertical_guides_": [ 180.0 ]
}

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.97402, 0.226464, 0, -0.226464, 0.97402, 0, 1.98405, 2.33225 )
size = 3.0

[node name="rat_props" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.909142, 0, 0.416487, 0, 1, 0, -0.416487, 0, 0.909142, -1.72531, 0, 0 )

[node name="Mr_Onion" parent="." instance=ExtResource( 2 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 5.46623, 0, -2.01231 )

[node name="Timer" type="Timer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
margin_left = 94.0
margin_top = 17.0
margin_right = 266.0
margin_bottom = 47.0
custom_colors/font_color = Color( 0.0745098, 0.894118, 0, 1 )
custom_colors/font_color_shadow = Color( 0.745098, 0.745098, 0.745098, 1 )
custom_fonts/font = SubResource( 4 )
text = "ALIEN NATION"
align = 1

[node name="new_game_btn" type="Button" parent="CanvasLayer"]
margin_left = 135.0
margin_top = 57.0
margin_right = 225.0
margin_bottom = 77.0
rect_min_size = Vector2( 90, 20 )
custom_fonts/font = ExtResource( 4 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 6 )
shortcut_in_tooltip = false
text = "New Game"
__meta__ = {
"_editor_description_": ""
}

[node name="continue_btn" type="Button" parent="CanvasLayer"]
visible = false
margin_left = 135.0
margin_top = 81.0
margin_right = 225.0
margin_bottom = 101.0
rect_min_size = Vector2( 90, 20 )
custom_fonts/font = ExtResource( 4 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 6 )
shortcut_in_tooltip = false
text = "Continue"
__meta__ = {
"_editor_description_": ""
}

[node name="credits_btn" type="Button" parent="CanvasLayer"]
margin_left = 135.0
margin_top = 105.0
margin_right = 225.0
margin_bottom = 125.0
rect_min_size = Vector2( 90, 20 )
custom_fonts/font = ExtResource( 4 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 6 )
shortcut_in_tooltip = false
text = "Credits"
__meta__ = {
"_editor_description_": ""
}

[node name="quit_btn" type="Button" parent="CanvasLayer"]
margin_left = 135.0
margin_top = 129.0
margin_right = 225.0
margin_bottom = 149.0
rect_min_size = Vector2( 90, 20 )
custom_fonts/font = ExtResource( 4 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 6 )
shortcut_in_tooltip = false
text = "Quit"
__meta__ = {
"_editor_description_": ""
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "walk_back"
anims/RESET = SubResource( 2 )
anims/walk_back = SubResource( 3 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="button_up" from="CanvasLayer/new_game_btn" to="." method="_on_new_game_btn_button_up"]
[connection signal="button_up" from="CanvasLayer/continue_btn" to="." method="_on_continue_btn_button_up"]
[connection signal="button_up" from="CanvasLayer/credits_btn" to="." method="_on_credits_btn_button_up"]
[connection signal="button_up" from="CanvasLayer/quit_btn" to="." method="_on_quit_btn_button_up"]
